IN DEVELOPMENT ======= 1.2.3-2

- added: auto-detector: potentially dangerous in Request (inspired by ASP.NET)
- added: new route flag: "xss"

- updated: nosql (new version, fixed problem with db.remove())

- fixed: utils.isJSON()

======= 1.2.3-1

- updated: nosql (new version, supports changes)

- fixed: routing to static files
- fixed: routing to controllers
- fixed: stop framework when "EADDRINUSE"
- fixed: JavaScript compressor (problem with "\n" in views)

======= 1.2.3-0

- added: controller.stream(contentType, stream, [downloadName], [headers]);
- added: controller.validate() - controller.validation() is alias

- updated: utils.async, controller.async
- updated: nosql (new version)
- updated: content types

- renamed: utils.validation() to utils.validate()
- renamed: JavaScript content type renamed to text/javascript (from application/x-javascript)

- fixed: template engine
- fixed: view engine
- fixed: routing priority

======= 1.2.2-9

- fixed: problem with nosql/view–>create

======= 1.2.2-8

- updated: rename framework.onAuthorize to framework.onAuthorization

======= 1.2.2-7

- added: utils.expression() / global.expression(), read documentation -> utils / expression
- added: @{global.property} and @{!global.property}, read documentation -> framework
- added: controller.global == framework.global
- added: framework.global = {} - this is global object
- added: framework.pathTemp(name), framework.pathPublic(name)
- added: framework.ifNotModified(req, res, value, [strict]) and framework.setModified(req, res, value)
- added: framework.responseStream(req, res, filename, stream, [downloadName], [headers])

- updated: controller.view403(), controller.view403() and controller.view500()
- updated: nosql (supports binary files)

- fixed: view condition @{if condition} @{endif}
- fixed: framework.onLoaded throwing error

======= 1.2.2-6

- added: supports Accept-Ranges for streaming
- added: new config item: static-accepts-custom: .mp3, .flv, etc.
