@@ -58,6 +58,7 @@ function Controller(name, subscribe, req, res, internal) {
 	this.isTest = req.headers['assertion-testing'] === '1';
 	this.isDebug = subscribe.app.config.debug;
 	this.global = subscribe.app.global;
+	this.flags = req.flags;
 
 	utils.extend(this.internal, internal, true);
 
