@@ -48,6 +48,7 @@ require('./prototypes');
 
 function Framework() {
 	this.version = 1231;
+	this.versionNode = parseInt(process.version.replace('v', '').replace(/\./g, ''), 10);
 
 	this.config = {
 		debug: false,
@@ -1800,6 +1801,7 @@ Framework.prototype._request = function(req, res) {
 	req.subdomain = [];
 	res.isFlush = false;
 
+	var isXSS = false;
 	var header = req.headers;
 	var protocol = req.connection.encrypted ? 'https' : 'http';
 
@@ -1819,14 +1821,10 @@ Framework.prototype._request = function(req, res) {
 	else
 		req.ip = req.connection.remoteAddress;
 
-   	if (req.uri.query) {
-
-		if (self.onXSS !== null && route.flags.indexOf('xss') === -1 && self.onXSS(req.uri.query)) {
-			req.connection.destroy();
-			return;
-		}
-
+   	if (req.uri.query && req.uri.query.length > 0) {
    		req.data.get = qs.parse(req.uri.query);
+   		if (self.onXSS !== null && self.onXSS(req.uri.query))
+   			isXSS = true;
    	}
 
    	// if is static file, return file
@@ -1893,6 +1891,9 @@ Framework.prototype._request = function(req, res) {
 	if (req.isXHR)
 		flags.push('xhr');
 
+	if (isXSS)
+		flags.push('xss');
+
 	req.flags = flags;
 
 	// call event request
@@ -1916,7 +1917,7 @@ Framework.prototype._request = function(req, res) {
    				return false;
    			};
 
-   			if (self.onXSS !== null && route.flags.indexOf('xss') === -1) {
+   			if (self.onXSS !== null) {
    				fnXSS = function(data) {
    					return self.onXSS(data);
    				};
@@ -1925,8 +1926,8 @@ Framework.prototype._request = function(req, res) {
 			internal.parseMULTIPART(req, multipart, route.maximumSize, self.config['directory-temp'], fnXSS, function() {
 				self.request(req, res, req.flags);
 			});
-				
-			req.resume();
+
+			req.resume();				
 			return;
 
    		} else {
@@ -1945,21 +1946,23 @@ Framework.prototype._request = function(req, res) {
 
     req.on('end', function() {
 
-    	if (!req.buffer.isExceeded && typeof(req.buffer.data) !== 'undefined' && req.buffer.data.length > 0) {
+    	if (!req.buffer.isExceeded && req.buffer.data.length > 0) {
     		var data = req.buffer.data;
 
     		if (route.flags.indexOf('json') !== -1) {
+
     			try
     			{
     				req.data.post = data.isJSON() ? JSON.parse(data) : null;
     			} catch (err) {
     				req.data.post = null;
     			}
+
     		} else {
 
-	    		if (self.onXSS !== null && route.flags.indexOf('xss') === -1 && self.onXSS(data)) {
-	    			req.connection.destroy();
-	    			return;
+	    		if (self.onXSS !== null && self.onXSS(data)) {
+	    			if (self.req.flags.indexOf('xss') === -1)
+	    				self.req.flags.push('xss');
 	    		}
 
 				req.data.post = qs.parse(data);
