@@ -195,11 +195,8 @@ exports.parseMULTIPART = function(req, contentType, maximumSize, tmpDirectory, o
 
 			if (close <= 0) {
 
-				if (isXSS) {
-					req.connection.destroy();
-					req.clear();
-					return;
-				}
+				if (isXSS && req.flags.indexOf('xss') === -1)
+					req.flags.push('xss');
 
 				callback();
 				return;
@@ -288,6 +285,7 @@ exports.routeCompareSubdomain = function(subdomain, arr) {
 	return {Number}
 */
 exports.routeCompareFlags = function(arr1, arr2, noLoggedUnlogged) {
+	
 	for (var i = 0; i < arr2.length; i++) {
 		var value = arr2[i];
 
@@ -302,9 +300,15 @@ exports.routeCompareFlags = function(arr1, arr2, noLoggedUnlogged) {
 				continue;
 		}
 
-		if (arr1.indexOf(value) === -1)
+		var index = arr1.indexOf(value);
+		
+		if (index === -1 && value === 'xss')
+			continue;
+
+		if (index === -1)
 			return value === 'logged' || value === 'unlogged' ? -1 : 0;
 	}
+
 	return 1;
 };
 
