@@ -202,11 +202,16 @@ Subscribe.prototype.lookup = function(subdomain, url, flags, options) {
 
 			var result = internal.routeCompareFlags(flags, item.flags);
 
-			// if user not logged or unlogged, then 401 redirect
+			// if user is not logged or unlogged, then 401 redirect
 			if (result === -1)
 				self.isAuthorized = false;
 
 			if (result < 1)
+				continue;
+
+		} else {
+
+			if (flags.indexOf('xss') !== -1)
 				continue;
 		}
 
