@@ -35,7 +35,6 @@ framework.onError = function(error, name, uri) {
 		errorStatus = 0;
 		return;
 	}
-	
 };
 
 function end() {
