@@ -1,7 +1,8 @@
 var qs = require('querystring');
 
-
 var str = 'name=' + 'asdlj asldj asljd aslkdj klasd jklasd klasjd lasjd=alsdlajsd';
 
+
+console.log(parseInt(process.version.replace('v', '').replace(/\./g, '')));
 console.log(decodeURIComponent(str));
 //console.log(str);
